# simple_mmapp

./: CMakeLists.txt
examples/: drawing_solid_rectangle.cpp  hello_world.cpp  input.cpp
include/: simple_gfx.hpp  simple_gfx_input.hpp  simple_gfx_vector.hpp
src/: .clangd  glad.c  simple_gfx.cpp  simple_gfx_input.cpp
